# python-rabe-cridlib

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  catalog-info.yaml  conftest.py  gen_ref_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  tea.yaml
.github/: dependabot.yml
.github/workflows/: lint-and-test.yaml  release.yaml  semantic-release.yaml
cridlib/: __init__.py  __version__.py  const.py  get.py  lib.py  parse.py  util.py
cridlib/strategy/: __init__.py  future.py  now.py  past.py
css/: code_select.css
docs/: gen_ref_pages.py
reference/SUMMARY/: index.html
reference/cridlib/: index.html
reference/cridlib/get/: index.html
reference/cridlib/lib/: index.html
reference/cridlib/parse/: index.html
reference/cridlib/strategy/: index.html
reference/cridlib/strategy/future/: index.html
reference/cridlib/strategy/now/: index.html
reference/cridlib/strategy/past/: index.html
reference/cridlib/util/: index.html
search/: search_index.json
tests/: conftest.py  test_get.py  test_lib.py  test_parse.py
tests/strategy/: test_future.py  test_now.py  test_past.py
