[tool.poetry]
name = "rabe-cridlib"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "Generate CRIDs for RaBe"
repository = "https://github.com/radiorabe/python-rabe-cridlib"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPL-3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
packages = [
    { include = "cridlib"},
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
uritools = ">=4,<6"
pytz = ">=2022.6"
python-slugify = "^8.0.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
Markdown = "^3.3"
mkdocstrings = {extras = ["python"], version = ">=0.20,<0.30"}
mkdocs-material = ">=8,<10"
mkdocs = "^1.4.2"
mkdocs-gen-files = ">=0.4,<0.6"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
pytest = ">=7.3.2,<9.0.0"
pytest-cov = ">=4,<7"
pytest-mypy = ">=0.10.3,<1.1.0"
pytest-random-order = "^1.1.0"
pytest-ruff = ">=0.3.1,<0.5.0"
requests-mock = "^1.10.0"
ruff = ">=0.5.1,<0.12.0"
types-python-slugify = "^8.0.0.0"
types-pytz = ">=2022.7,<2026.0"
types-requests = "^2.28.11"
wheel = ">=0.38.4,<0.47.0"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=cridlib --cov-fail-under=100 --ignore=docs/ --mypy --ruff"
filterwarnings = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
